[package]
name = "pacman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"


bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
toml = "0.7.3"


serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"]}
rayon = "1.7.0"
# bevy-tick-timers = "0.3.0"
